# db-scheduled-backup

./: Cargo.toml  Config.toml.example  README.md  setup.sh
.github/workflows/: release.yml
src/: main.rs
src/app/: config.rs  mod.rs
src/app/backup/: mod.rs
src/app/storage/: ftp.rs  mod.rs  s3.rs
