[package]
name = "db-scheduled-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
cron = "0.12.1"
serde = "1.0.202"
serde_derive = "1.0.202"
toml = "0.8.13"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1