[package]
name = "db-scheduled-backup"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
cron = "0.15.0"
serde = "1.0.202"
serde_derive = "1.0.202"
toml = "0.8.13"
suppaftp = "6.2.0"
aws-sdk-s3 = "1.7.0"
aws-config = "1.0.1"
aws-credential-types = "1.0.3"
aws-smithy-runtime-api = "1.0.3"
aws-types = "1.0.3"
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1